fix(data-table): removing extra space from last rowActions button (#541)

--- a/packages/crayons-core/src/components/data-table/data-table.scss
+++ b/packages/crayons-core/src/components/data-table/data-table.scss
@@ -156,6 +156,10 @@ div.fw-data-table-container {
             & fw-button {
               margin-right: 5px;
             }
+
+            & fw-button:last-child {
+              margin-right: 0px;
+            }
           }
 
           td.hidden {
